--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@ h1 {
     text-decoration: underline;
  }
 
+ .container {
+    margin: 50px;
+ }
 
+ .container span {
+    position: absolute;
+ }
 
  li {
     margin: 5px;
