--- a/style.css
+++ b/style.css
@@ -4,11 +4,7 @@ h1 {
     text-decoration: underline;
  }
 
- .container {
-    margin: 50px;
- }
-
- .container span {
+ .container span { 
     position: absolute;
     top: 0px;
     right: 0px;
@@ -47,4 +43,17 @@ li {
 
 #nav li:hover {
     background: gray;
+ }
+
+ .container {
+   margin: 50px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+
+ }
+
+ .container div {
+   min-width: 120px;
+   border: 3px solid rgb(25, 0, 255);
  }
